overhaul with views

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "discord-chat.setUpIfDiscordChaStartWhenVSCodeOpened": true,
-    "discord-chat.token": "NzY4MzkzNzI4MTYzMDUzNjE5.YdgFbw.XLHFjAWEvy_OfiY9mFWz2cB2Tgk"
+    "discord-chat.token": "\"NzY4MzkzNzI4MTYzMDUzNjE5.YlOJOA.5pt4Pj9o_kbf3UI63ke9sLOt2Ts\""
 }
